--- a/organizations.html
+++ b/organizations.html
@@ -106,7 +106,7 @@
                 <h2>ОБРАТИТЕСЬ К НАМ!</h2>
                 <p>Свяжитесь с нами, чтобы обсудить сотрудничество</p>
                 <div class="cta-buttons">
-                    <a href="contacts.html" class="btn btn-large">Связаться</a>
+                    <a href="contacts.html" class="btn btn-primary">Связаться</a>
                 </div>
             </div>
         </section>
