--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <h2>ПРИСОЕДИНЯЙТЕСЬ!</h2>
                 <p>Благодаря вашей помощи, мир становится добрее</p>
                 <div class="cta-buttons">
-                    <a href="volunteers.html" class="btn btn-primary">Стать волонтером</a>
-                    <a href="organizations.html" class="btn btn-secondary">Для организаций</a>
+                    <a href="volunteers.html" class="btn btn-large">Стать волонтером</a>
+                    <a href="organizations.html" class="btn btn-large">Для организаций</a>
                 </div>
             </div>
         </section>
