--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/svg+xml" href="./assets/icon/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon/apple-touch-icon.png">
+
     <title>ФудШер - Контакты</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,6 +24,7 @@
                 <li><a href="about.html">О НАС</a></li>
                 <li><a href="volunteers.html">ВОЛОНТЕРАМ</a></li>
                 <li><a href="organizations.html">ОРГАНИЗАЦИЯМ</a></li>
+                <li><a href="rules.html">ПРАВИЛА</a></li>
                 <li><a href="contacts.html" class="active">КОНТАКТЫ</a></li>
             </ul>
         </nav>
