fix: АНО to ООО

--- a/rules.html
+++ b/rules.html
@@ -81,7 +81,7 @@
 
                     <p><strong>Для участия понадобятся:</strong></p>
                     <ul>
-                        <li>волонтерский договор и доверенность на осуществление вывозов от лица АНО</li>
+                        <li>волонтерский договор и доверенность на осуществление вывозов от лица ООО</li>
                         <li>документ, подтверждающий личность</li>
                     </ul>
                 </article>
